--- a/public/styles/vars.module.scss
+++ b/public/styles/vars.module.scss
@@ -8,16 +8,16 @@ $titles-font: "Montserrat", sans-serif;
 $text-font: "Hind Madurai", sans-serif;
 
 $white-theme-color-main: #ffffff;
-$black-theme-color-main: white;
+$black-theme-color-main: #000;
 
 $white-theme-color-secondary: #f5f5f4;
-$black-theme-color-secondary: white;
+$black-theme-color-secondary: #1E1E1E;
 
 $white-theme-color-text: #1e1e1e;
-$black-theme-color-text: white;
+$black-theme-color-text: #F5F5F4;
 
 $white-theme-color-titles: #1e1e1e;
-$black-theme-color-titles: white;
+$black-theme-color-titles: #F5F5F4;
 
 $theme-color-alternative: #0d1b2a;
 
