--- a/public/styles/vars.module.scss
+++ b/public/styles/vars.module.scss
@@ -19,7 +19,8 @@ $black-theme-color-text: #F5F5F4;
 $white-theme-color-titles: #1e1e1e;
 $black-theme-color-titles: #F5F5F4;
 
-$theme-color-alternative: #0d1b2a;
+$white-theme-color-alternative: #0d1b2a;
+$black-theme-color-alternative: white;
 
 $white-theme-button-color-main: #1e1e1e;
 $black-theme-button-color-main: white;
