--- a/public/styles/vars.module.scss
+++ b/public/styles/vars.module.scss
@@ -29,7 +29,7 @@ $white-theme-button-color-hover: #272727;
 $black-theme-button-color-hover: white;
 
 $white-theme-button-color-text: #f5f5f4;
-$black-theme-button-color-text: white;
+$black-theme-button-color-text: black;
 
 $mobile-image-size: 120px;
 $mobile-font-title-size: 16px;
