--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -43,6 +43,14 @@
       background-color: $white-theme-button-color-hover;
     }
   }
+  
+  .bar {
+    width: 35px;
+    height: 3px;
+    background-color: $white-theme-button-color-main;
+    margin: 6px 0;
+    transition: 0.4s;
+  }
 }
 
 .black {
@@ -69,6 +77,14 @@
     &:hover {
       background-color: $black-theme-button-color-hover;
     }
+  }
+
+  .bar {
+    width: 35px;
+    height: 3px;
+    background-color: $black-theme-button-color-main;
+    margin: 6px 0;
+    transition: 0.4s;
   }
 }
 
